@@ -23,8 +23,8 @@ public class GPSDataProvider extends DataProvider {
                 if (!useSample(timestamp))
                     return;
                 DataPoint dataPoint = new DataPoint(GPSDataProvider.this, System.currentTimeMillis() / 1000., timestamp);
-                dataPoint.addValue(new Double(l.getLatitude()));
-                dataPoint.addValue(new Double(l.getLongitude()));
+                dataPoint.addValue(Double.valueOf(l.getLatitude()));
+                dataPoint.addValue(Double.valueOf(l.getLongitude()));
                 parent.queue(dataPoint);
             }
 
